--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $white;
-  font: 18px/1.4 $helvetica;
+  font: 18px/1.4 $cmu;
   color: $darkGray;
 }
 
@@ -31,9 +31,9 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: $cmu;
   color: $darkerGray;
-  font-weight: bold;
+  font-weight: lighter;
 
   line-height: 1.7;
   margin: 1em 0 15px;
@@ -194,10 +194,9 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
+  font-family: $cmu;
+  font-weight: lighter;
   font-size: 28px;
-  letter-spacing: 1px;
 }
 
 .site-description {
@@ -213,7 +212,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
+  font-family: $cmu;
   font-size: 18px;
 
   @include mobile {
@@ -227,8 +226,7 @@ nav {
     margin-left: 20px;
     color: $darkGray;
     text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
+    font-weight: lighter;
 
     @include mobile {
       margin: 0 10px;
