--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -12,7 +12,7 @@
     {% endif %}
     <meta name="author" content="{{ site.name }}" />
 
-    {% if page.title %}
-    <meta property="og:title" content="{{ page.title }}" />
-    <meta property="twitter:title" content="{{ page.title }}" />
+    {% if page.book %}
+    <meta property="og:title" content="{{ page.book }}:{{ page.chapter }}{% if page.verse %}{{ page.verse }}{% endif %} - {% if page.heTitle %}{{ page.heTitle }}{% endif %} {% if page.tlTitle %} {{ page.tlTitle }}{% endif %} {% if page.enTitle %}{{ page.enTitle }}{% endif %}" />
+    <meta property="twitter:title" content="{{ page.book }}:{{ page.chapter }}{% if page.verse %}{{ page.verse }}{% endif %} - {% if page.heTitle %}{{ page.heTitle }}{% endif %} {% if page.tlTitle %} {{ page.tlTitle }}{% endif %} {% if page.enTitle %}{{ page.enTitle }}{% endif %}" />
     {% endif %}
