--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
+  <h1>{{ page.book }} {{ page.chapter }}{% if page.verse %}:{{ page.verse }}{% endif %} - {% if page.heTitle %}<span class="he">{{ page.heTitle }}</span>{% endif %} {% if page.tlTitle %}<span class="tl">{{ page.tlTitle }}</span>{% endif %} {% if page.enTitle %}{{ page.enTitle }}{% endif %}</h1>
 
   <div class="entry">
     {{ content }}
