add he filter plugin, add Joshua 2 post

--- a/style.scss
+++ b/style.scss
@@ -58,6 +58,11 @@ td {
   font-weight: normal;
 }
 
+.tltr {
+  font-family: $enSerif;
+  font-weight: normal;
+}
+
 .verses-attrib {
   display: block;
   text-align: center;
