add custom liquid, tweak style, add posts through Samson story

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,7 +28,7 @@ $white: #fff;
 // Font stacks
 $enSanSerif: CMUSansSerif, sans-serif;
 $enSerif: Georgia, serif;
-$heSerif: 'Shofar D', serif;
+$heSerif: 'Shofar D', 'Noto Naskh Arabic', serif;
 
 // Mobile breakpoints
 @mixin mobile {
