--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -13,6 +13,6 @@
     <meta name="author" content="{{ site.name }}" />
 
     {% if page.book %}
-    <meta property="og:title" content="{{ page.book }}:{{ page.chapter }}{% if page.verse %}{{ page.verse }}{% endif %} - {% if page.heTitle %}{{ page.heTitle }}{% endif %} {% if page.tlTitle %} {{ page.tlTitle }}{% endif %} {% if page.enTitle %}{{ page.enTitle }}{% endif %}" />
-    <meta property="twitter:title" content="{{ page.book }}:{{ page.chapter }}{% if page.verse %}{{ page.verse }}{% endif %} - {% if page.heTitle %}{{ page.heTitle }}{% endif %} {% if page.tlTitle %} {{ page.tlTitle }}{% endif %} {% if page.enTitle %}{{ page.enTitle }}{% endif %}" />
+    <meta property="og:title" content="{% pagePostTitleNoHTML %}" />
+    <meta property="twitter:title" content="{% pagePostTitleNoHTML %}" />
     {% endif %}
