--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -51,3 +51,7 @@ table {
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
+// Added by m-yac - fixes small, sub, sup tags
+small, sub, sup { font-size: .83em }
+sub             { vertical-align: sub }
+sup             { vertical-align: super }
