add about, favorites, and index pages,

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -10,9 +10,12 @@
     <meta name="description" content="{{ site.description }}">
     <meta property="og:description" content="{{ site.description }}" />
     {% endif %}
-    <meta name="author" content="{{ site.name }}" />
+    <meta name="author" content="{{ site.title }}" />
 
-    {% if page.book %}
+    {% if page.chapter %}
     <meta property="og:title" content="{% pagePostTitleNoHTML %}" />
     <meta property="twitter:title" content="{% pagePostTitleNoHTML %}" />
+    {% elsif page.title %}
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
