--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.book %}{% pagePostTitleNoHTML %} -{% endif %} {{ site.name }}</title>
+    <title>{% if page.chapter %}{% pagePostTitleNoHTML %} -{% elsif page.title %}{{ page.title }} -{% endif %} {{ site.title }}</title>
 
     {% include meta.html %}
 
@@ -10,7 +10,7 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.baseurl }}/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.baseurl }}/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -20,15 +20,24 @@
       <div class="container">
         <header class="masthead clearfix">
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
+          <nav>
+            <a href="{{ site.baseurl }}/nach-2024">Index</a>
+            <a href="{{ site.baseurl }}/favorites">Favorites</a>
+            <a href="{{ site.baseurl }}/about">About</a>
+          </nav>
         </header>
       </div>
     </div>
 
     <div id="main" role="main" class="container">
       {{ content }}
+    </div>
+
+    <div class="footer">
+      <a href="https://yacavone.net" class="gray">Back to my website</a>
     </div>
   </body>
 </html>
