--- a/style.scss
+++ b/style.scss
@@ -204,6 +204,27 @@ img {
   max-width: 100%;
 }
 
+.img-block {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: 0 20px;
+}
+
+figcaption {
+  text-align: center;
+  padding-top: 5px;
+  font-style: italic;
+  font-size: 90%;
+}
+
+figure {
+  min-width: 300px;
+}
+
 // Fixes images in popup boxes from Google Translate
 .gmnoprint img {
   max-width: none;
@@ -364,7 +385,6 @@ nav {
   }
 
   img {
-    width: 75%;
     display: block;
     margin-left: auto;
     margin-right: auto;
