--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
             <a href="{{ site.baseurl }}/nach-2024">Index</a>
             <a href="{{ site.baseurl }}/favorites">Favorites</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/feed.xml"><i class="svg-icon rss"></i></a>
           </nav>
         </header>
       </div>
