--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -10,7 +10,7 @@ layout: default
   {% assign posts = site.categories[page.cat] | sort: "date" %}
   {% for post in posts %}
     {% if post.chapter == 1 %}
-      </td></tr><tr><td class="all-posts-book-title">
+      </td></tr><tr><td class="htd book-htd">
         <a href="{{ site.baseurl }}/nach-2024/{{ post.book }}">{{ post.book }}</a>
       </td><td>
     {% endif %}
@@ -23,20 +23,20 @@ layout: default
   <table><tbody><tr><td>
     {% assign posts = site.categories[page.cat] | sort: "date" %}
     {% for post in posts %}
-      {% assign year = post.date | date: "%Y" %}
+      {% assign year = post.date | date: "%y" %}
       {% assign month = post.date | date: "%b" %}
       
       {% assign day = post.date | date: "%e" %}
       {% if day == " 1" %}
         </td></tr><tr>
-        {% if month == "Jan" or month == "Feb" and year == "2024" %}
-          <td class="all-posts-book-title">
-            {{ year }}
+        {% if month == "Jan" or month == "Feb" and year == "24" %}
+          <td class="htd">
+            ’{{ year }}
           </td>
         {% else %}
           <td></td>
         {% endif %}
-        <td class="all-posts-book-title">
+        <td class="htd">
           {{ month }}
         </td><td>
       {% endif %}
