--- a/style.scss
+++ b/style.scss
@@ -102,9 +102,14 @@ td {
   text-align: center;
 }
 
-.all-posts-book-title {
+.htd {
   font-size: 24px;
   font-weight: bold;
+  text-align: center;
+}
+
+.book-htd {
+  text-align: right;
 }
 
 .footer {
