add post for I Samuel 5

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,6 +29,7 @@ $white: #fff;
 $enSanSerif: CMUSansSerif, sans-serif;
 $enSerif: Georgia, serif;
 $heSerif: 'Shofar D', 'Noto Naskh Arabic', serif;
+$greekSerif: serif;
 
 // Mobile breakpoints
 @mixin mobile {
