--- a/style.scss
+++ b/style.scss
@@ -50,6 +50,11 @@ td {
   font-weight: normal;
 }
 
+.greek {
+  font-family: $greekSerif;
+  font-weight: normal;
+}
+
 .tl {
   font-family: $enSerif;
   font-size: 92%;
