--- a/style.scss
+++ b/style.scss
@@ -75,8 +75,9 @@ td {
   font-style: italic;
 }
 
-.verses-no-wrap {
-  white-space: nowrap;
+.verses-scaled {
+  margin-left: -10px;
+  margin-right: -10px;
 }
 
 .sefaria-link {
