--- a/style.scss
+++ b/style.scss
@@ -132,6 +132,10 @@ span.small-caps:first-letter {
   text-align: right;
 }
 
+.post-list {
+  font-size: 97%;
+}
+
 .footer {
   text-align: center;
   margin-top: 40pt;
